python/testData/highlighting/returnOutsideOfFunction.py
def <info descr="null">foo</info>():
    class <info descr="null">C</info>:
        <error descr="'return' outside of function">return 1</error>